2002-05-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-cat.c (stream_read): Rewritten to work
	correctly. This was broken worse than I could imagine :-)
	(stream_write): Fix similarly.

2002-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_reset): Same.

	* gmime-stream-file.c (stream_reset): Same.

	* gmime-stream-fs.c (stream_reset): If the stream position is
	already reset, just return 0.

2002-05-23  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated documentation.

2002-05-22  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-multipart.c (multipart_write_to_stream): Avoid adding an
	extranious newline character when a preface doesn't exist.

2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_set_content_md5): Fix some compiler
	warnings as well as doing some more error handling.
	(g_mime_part_verify_content_md5): Same.

	* md5-utils.c: Removed some compiler warnings.

2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_seek): Return the absolute offset
	into the cat stream rather than the relative offset of one of the
	substreams on success. Fixed a few other things too.
	(stream_read): Fix the logic here so that we never try reading
	from a stream that is current at EOS.

2002-05-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): Only compensate
	for the '\n' if we found a boundary.

2002-05-16  Charles Kerr <charles@rebelbase.com>

	* gmime-filter-yenc.c: fixed regression that caused end line of
	yenc encoding to not be detected.  This was causing crc errors in Pan.

2002-05-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-filter.c (stream_destroy): Removed.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_read): Don't allow our caller to read
	past the end of the stream.
	(stream_write): Same.
	(stream_seek): Don't forget to add the current source stream's